fix(SectionService): 구간 등록 모든 테스트 통과하게끔 수정